Add template file

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,6 +1,6 @@
 [user]
-	name = {{ .gitUser }}
-	email = {{ .gitEmail }}
+	name = {{ .git_user }}
+	email = {{ .git_email }}
 [core]
 	excludesfile = $HOME/.gitignore_global
 	filemode = false
