--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -3,7 +3,12 @@
     url = "https://github.com/amix/vimrc.git"
     refreshPeriod = "168h"
 
+
+{{ if eq .chezmoi.os "linux" -}}
+
 ["pwndbg"]
     type = "git-repo"
     url = "https://github.com/pwndbg/pwndbg"
     refreshPeriod = "168h"
+
+{{ end -}}
