--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -3,6 +3,10 @@
     url = "https://github.com/amix/vimrc.git"
     refreshPeriod = "168h"
 
+[".fzf"]
+    type = "git-repo"
+    url = "https://github.com/junegunn/fzf.git"
+    refreshPeriod = "168h"
 
 {{ if eq .chezmoi.os "linux" -}}
 
