--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,6 +1,13 @@
 {{- $git_user := promptString "git_user" -}}
 {{- $git_email := promptString "git_email" -}}
 
+{{/* TODO: only prompt Windows */}}
+{{- $win_user := promptString "win_user" -}}
+
 [data]
     git_user = "{{ $git_user }}"
     git_email = "{{ $git_email }}"
+
+{{- if eq .chezmoi.username "wsl" }}
+    win_user = "{{ $win_user }}"
+{{- end }}
