Fix run scriptg

--- a/run_onchange_after_install-shell.sh.tmpl
+++ b/run_onchange_after_install-shell.sh.tmpl
@@ -13,11 +13,11 @@ fi
 
 ### pwndbg ###
 # https://github.com/pwndbg/pwndbg
-if [[ ! -e ".gdbinit.pwndbg.installed" ]]; then
+if [[ ! -e ".installed.pwndbg" ]]; then
     pushd pwndbg
     ./setup.sh
     popd
-    touch .gdbinit.pwndbg.installed
+    touch .installed.pwndbg
 fi
 
 {{ end -}}
