--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -1,5 +1,4 @@
-# if local machine (Mac or WSL2)
-{{ if or (eq .chezmoi.os "darwin") (eq .chezmoi.username "wsl") }}
+{{- if .isLocal -}}
 # prefixキーをC-qに変更
 set -g prefix C-q
 # C-q*2でC-qを送る
@@ -14,12 +13,11 @@ set-option -g status-bg "colour238"
 # status line の文字色を指定する
 set-option -g status-fg "colour255"
 
-{{ else }}
-
-# remote machine
+{{- else }}
 
 set-option -g status-bg "colour12"
-{{ end }}
+
+{{- end }}
 
 # tmuxを256色表示できるようにする
 set-option -g default-terminal tmux-256color
