--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -8,11 +8,9 @@
     url = "https://github.com/junegunn/fzf.git"
     refreshPeriod = "168h"
 
-{{ if eq .chezmoi.os "linux" -}}
-
+{{- if .isLinux }}
 ["pwndbg"]
     type = "git-repo"
     url = "https://github.com/pwndbg/pwndbg"
     refreshPeriod = "168h"
-
-{{ end -}}
+{{- end }}
