--- a/private_dot_zshrc.tmpl
+++ b/private_dot_zshrc.tmpl
@@ -1,9 +1,7 @@
 [[ -v ZPROF ]] && zmodload zsh/zprof # profile start
 
 # tmux autostart
-# TODO: windows or mac
-if [ -n "$WT_SESSION" -a -z "$TMUX" ]
-then
+if [ -n "$WT_SESSION" -a -z "$TMUX" ]; then
     [[ $TERM_PROGRAM != "vscode" ]] && tmux attach -t 0 || tmux new -s 0
 fi
 
