--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -8,7 +8,7 @@
     url = "https://github.com/junegunn/fzf.git"
     refreshPeriod = "168h"
 
-{{- if .isLinux }}
+{{- if and (.isLinux) (not .isCentOS) }}
 ["pwndbg"]
     type = "git-repo"
     url = "https://github.com/pwndbg/pwndbg"
