--- a/run_onchange_after_install-shell.sh.tmpl
+++ b/run_onchange_after_install-shell.sh.tmpl
@@ -9,7 +9,7 @@ if [[ ! -e ".fzf.zsh" ]]; then
     ./.fzf/install --all --no-update-rc
 fi
 
-{{- if .isLinux }}
+{{- if and (.isLinux) (not .isCentOS) }}
 
 ### pwndbg ###
 # https://github.com/pwndbg/pwndbg
