--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -6,7 +6,7 @@
 {{- $isMac := eq .chezmoi.os "darwin" }}
 {{- $isLocal := or $isMac $isWSL }}
 {{- $isWork := eq .chezmoi.username $git_user }}
-{{- $isCentOS := eq .chezmoi.osRelease.id "centos" }}
+{{- $isCentOS := and ($isLinux) (eq .chezmoi.osRelease.id "centos") }}
 
 {{- $win_user := "" -}}
 
