--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -14,3 +14,10 @@
     url = "https://github.com/pwndbg/pwndbg"
     refreshPeriod = "168h"
 {{- end }}
+
+{{- if .isLocal }}
+[".tmux/plugins/tpm"]
+    type = "git-repo"
+    url = "https://github.com/tmux-plugins/tpm"
+    refreshPeriod = "168h"
+{{- end }}
