--- a/dot_zshrc.d/wsl.zsh.tmpl
+++ b/dot_zshrc.d/wsl.zsh.tmpl
@@ -16,6 +16,8 @@ alias gocopy="/mnt/c/Users/$WINUSER/go/bin/gocopy.exe"
 alias gopaste="/mnt/c/Users/$WINUSER/go/bin/gopaste.exe"
 alias pbpaste="gopaste"
 alias pbcopy="gocopy"
+alias clip.exe="/mnt/c/Windows/System32/clip.exe"
+alias bcomp="/mnt/c/Program\ Files/Beyond\ Compare\ 4/BComp.exe"
 
 #
 # Function
