--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -40,8 +40,8 @@ bind l select-pane -R
 ## ペインの順次移動をCtr + o に設定
 bind -n C-o select-pane -t :.+
 
-# 前のウィンドウにlで切り替え
-bind-key l last-window
+# 前のウィンドウにiで切り替え
+bind-key i last-window
 
 # vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
