--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -5,7 +5,7 @@
 {{- $isWSL := and $isLinux (.chezmoi.kernel.osrelease | lower | contains "microsoft") (ne .chezmoi.fqdnHostname .chezmoi.hostname) }}
 {{- $isMac := eq .chezmoi.os "darwin" }}
 {{- $isLocal := or $isMac $isWSL }}
-{{- $isWork := eq .chezmoi.username $git_user }}
+{{- $isWork := eq $git_user ($git_email | splitList "@" | first) }}
 {{- $isCentOS := and ($isLinux) (eq .chezmoi.osRelease.id "centos") }}
 
 {{- $win_user := "" -}}
