--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -2,5 +2,5 @@
 	name = {{ .git_user }}
 	email = {{ .git_email }}
 [core]
-	excludesfile = $HOME/.gitignore_global
+	excludesfile = ~/.gitignore_global
 	filemode = false
