--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -116,5 +116,15 @@ if ! shopt -oq posix; then
   fi
 fi
 
+#
+# My
+#
+
+BASHHOME="${HOME}/.bashrc.d"
+
 [ -f ~/.fzf.bash ] && source ~/.fzf.bash
 [ -f $HOME/.asdf/asdf.sh ] && source "$HOME/.asdf/asdf.sh"
+
+{{- if .isWork }}
+source $BASHHOME/work.bash
+{{- end }}
