--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -108,7 +108,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @tmux_power_theme 'sky'
 run-shell "./.tmux/plugins/my_tmux-power/tmux-power.tmux"
 
-set -g @plugin 'soyuka/tmux-current-pane-hostname'
+#set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
 run '~/.tmux/plugins/tpm/tpm'
 
