--- a/dot_zshrc.d/wsl.zsh.tmpl
+++ b/dot_zshrc.d/wsl.zsh.tmpl
@@ -18,6 +18,8 @@ alias pbpaste="gopaste"
 alias pbcopy="gocopy"
 alias clip.exe="/mnt/c/Windows/System32/clip.exe"
 alias bcomp="/mnt/c/Program\ Files/Beyond\ Compare\ 4/BComp.exe"
+alias cmd="/mnt/c/Windows/System32/cmd.exe"
+alias cmd.exe="/mnt/c/Windows/System32/cmd.exe"
 
 #
 # Function
