--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -37,8 +37,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-## ペインの順次移動をCtr + o に設定
-bind -n C-o select-pane -t :.+
+# Use Alt-hjkl keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+## ペインの順次移動をAlt + o に設定
+bind -n M-o select-pane -t :.+
 
 # 前のウィンドウにiで切り替え
 bind-key i last-window
