--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -26,7 +26,9 @@ set-option -g default-terminal screen-256color
 set-option -g default-terminal tmux-256color
 {{- end }}
 
-set -g terminal-overrides 'xterm:colors=256'
+# True color support?
+set-option -sa terminal-overrides ",xterm*:Tc"
+# set -g terminal-overrides 'xterm:colors=256'
 
 # 2重tmuxでもクリップボードコピーできるようにする OSC52
 set-option -g set-clipboard on
