add wizterm and ahk

--- a/private_dot_zshrc.tmpl
+++ b/private_dot_zshrc.tmpl
@@ -1,9 +1,21 @@
 [[ -v ZPROF ]] && zmodload zsh/zprof # profile start
 
 # tmux autostart
-if [ -n "$WT_SESSION" -a -z "$TMUX" ]; then
-    [[ $TERM_PROGRAM != "vscode" ]] && tmux attach -t 0 || tmux new -s 0
+if [[ "$TERM_PROGRAM" == "WezTerm" && -z "$TMUX" ]]; then
+    #tmux attach -t 0 || tmux new -s 0
+    #tmux new-session -A -s 0
+    #
+    attach_session=$(tmux 2> /dev/null ls -F \
+        '#{session_attached} #{?#{==:#{session_last_attached},},1,#{session_last_attached}} #{session_id}' |
+        awk '/^0/ { if ($2 > t) { t = $2; s = $3 } }; END { if (s) printf "%s", s }')
+
+    if [ -n "$attach_session" ]; then
+       tmux attach -t "$attach_session"
+    else
+       tmux new
+    fi
 fi
+
 
 # Set the list of directories that Zsh searches for programs.
 fpath=(
