--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -70,6 +70,14 @@ bind c new-window -c "#{pane_current_path}"
 set -g base-index 1
 ## ペインのインデックスを1から始める
 setw -g pane-base-index 1
+# セッションの番号を1から始める
+set-option -g @first-run 1
+set-hook -g session-created {
+    if-shell -F '#{?@first-run,1,0}' {
+        set-option -g @first-run 0
+        if-shell -F '#{==:#{session_name},0}' { rename-session 1 }
+    }
+}
 
 # マウス操作を有効にする
 set-option -g mouse on
