--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -1,4 +1,19 @@
-{{- if .isLocal -}}
+# TABとCTRL-Iを区別するための設定、今は使ってないのでオフにする
+# @see: https://github.com/tmux/tmux/issues/2705#issuecomment-1518520942
+
+# not working
+# set -s extended-keys on
+# set -as terminal-features 'xterm*:extkeys'
+
+# bind-key -T root         F12        set key-table workaround
+# bind-key -T workaround   F12        set key-table root
+# bind-key -T workaround   Tab        send-keys Escape "[105;6u" \; set key-table root
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+# bind-key -T root         F12        set key-table virt
+# bind-key -T virt 'C-i' if-shell "$is_vim" "send-keys Escape '[105;6u'" "send C-i" \; set key-table root
+
+{{ if .isLocal -}}
 # prefixキーをC-qに変更
 set -g prefix C-q
 # C-q*2でC-qを送る
@@ -28,7 +43,6 @@ set-option -g default-terminal tmux-256color
 
 # True color support?
 set-option -sa terminal-overrides ",xterm*:Tc"
-# set -g terminal-overrides 'xterm:colors=256'
 
 # 2重tmuxでもクリップボードコピーできるようにする OSC52
 set-option -g set-clipboard on
@@ -123,8 +137,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 #set -g @plugin 'wfxr/tmux-power'
 set -g @tmux_power_theme 'sky'
 run-shell "./.tmux/plugins/my_tmux-power/tmux-power.tmux"
-
-#set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
 run '~/.tmux/plugins/tpm/tpm'
 
