--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -131,7 +131,8 @@ set-option -g renumber-windows on
 # tmux plugin
 set -g @plugin 'tmux-plugins/tpm'
 # fix startup prompt
-set-option -s escape-time 50
+# これを有効にするとvimでESCの反応が遅くなる
+# set-option -s escape-time 50
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 #set -g @plugin 'wfxr/tmux-power'
