nvim: fix netrw when opening directory

--- a/dot_zshrc.d/wsl.zsh.tmpl
+++ b/dot_zshrc.d/wsl.zsh.tmpl
@@ -6,7 +6,7 @@ WINUSER="{{ .win_user }}"
 
 ### exe ###
 alias em="/mnt/c/Users/$WINUSER/AppData/Local/Programs/EmEditor/EmEditor.exe"
-alias open="/mnt/c/Windows/explorer.exe"
+#alias open="/mnt/c/Windows/explorer.exe"
 alias wwireshark="/mnt/c/Program\ Files/Wireshark/Wireshark.exe"
 alias code="/mnt/c/Users/$WINUSER/AppData/Local/Programs/Microsoft\ VS\ Code/bin/code"
 alias winget="/mnt/c/Users/$WINUSER/AppData/Local/Microsoft/WindowsApps/winget.exe"
@@ -18,7 +18,6 @@ alias pbpaste="gopaste"
 alias pbcopy="gocopy"
 alias clip.exe="/mnt/c/Windows/System32/clip.exe"
 alias bcomp="/mnt/c/Program\ Files/Beyond\ Compare\ 4/BComp.exe"
-alias cmd="/mnt/c/Windows/System32/cmd.exe"
 alias cmd.exe="/mnt/c/Windows/System32/cmd.exe"
 
 #
