--- a/private_dot_zshrc.tmpl
+++ b/private_dot_zshrc.tmpl
@@ -4,18 +4,21 @@
 if [[ "$TERM_PROGRAM" == "WezTerm" && -z "$TMUX" ]]; then
     #tmux attach -t 0 || tmux new -s 0
     #tmux new-session -A -s 0
-    #
-    attach_session=$(tmux 2> /dev/null ls -F \
-        '#{session_attached} #{?#{==:#{session_last_attached},},1,#{session_last_attached}} #{session_id}' |
-        awk '/^0/ { if ($2 > t) { t = $2; s = $3 } }; END { if (s) printf "%s", s }')
-
-    if [ -n "$attach_session" ]; then
-       tmux attach -t "$attach_session"
+    tmux_running=$(pgrep tmux)
+    if [[ -z "$tmux_running" ]]; then
+      tmux new
     else
-       tmux new
+      attach_session=$(tmux 2> /dev/null ls -F \
+          '#{session_attached} #{?#{==:#{session_last_attached},},1,#{session_last_attached}} #{session_id}' |
+          awk '/^0/ { if ($2 > t) { t = $2; s = $3 } }; END { if (s) printf "%s", s }')
+
+      if [ -n "$attach_session" ]; then
+         exec tmux attach -t "$attach_session"
+      else
+         exec tmux new
+      fi
     fi
 fi
-
 
 # Set the list of directories that Zsh searches for programs.
 fpath=(
