add wezterm shell integration setting

--- a/private_dot_zshrc.tmpl
+++ b/private_dot_zshrc.tmpl
@@ -50,6 +50,10 @@ source $ZSHHOME/wsl.zsh
 {{- end }}
 source $ZSHHOME/theme.zsh
 
+if [[ "$TERM_PROGRAM" == "WezTerm" ]]; then
+  source $ZSHHOME/wezterm.sh
+fi
+
 # key
 [[ -f $HOME/.env ]] && source $HOME/.env
 
