add wezterm tmux like settings

--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -1,3 +1,7 @@
+# for wezterm
+# see: https://wezfurlong.org/wezterm/shell-integration.html?h=shell+integration
+set -g allow-passthrough on
+
 # TABとCTRL-Iを区別するための設定、今は使ってないのでオフにする
 # @see: https://github.com/tmux/tmux/issues/2705#issuecomment-1518520942
 
