--- a/private_dot_zshrc.tmpl
+++ b/private_dot_zshrc.tmpl
@@ -1,21 +1,28 @@
 [[ -v ZPROF ]] && zmodload zsh/zprof # profile start
 
+TMUX_AUTO_START="on"
+
 # tmux autostart
-if [[ "$TERM_PROGRAM" == "WezTerm" && -z "$TMUX" ]]; then
-    #tmux attach -t 0 || tmux new -s 0
-    #tmux new-session -A -s 0
+if [[ "$TERM_PROGRAM" == "WezTerm" && -z "$TMUX" && "$TMUX_AUTO_START" == "on" ]]; then
     tmux_running=$(pgrep tmux)
     if [[ -z "$tmux_running" ]]; then
+      # 最初のメインセッションはシェル経由で立ち上げる
       tmux new
     else
       attach_session=$(tmux 2> /dev/null ls -F \
           '#{session_attached} #{?#{==:#{session_last_attached},},1,#{session_last_attached}} #{session_id}' |
           awk '/^0/ { if ($2 > t) { t = $2; s = $3 } }; END { if (s) printf "%s", s }')
 
+      # アタッチされていないセッションがすでにあった場合は一番若い番号のセッションにアタッチ
       if [ -n "$attach_session" ]; then
-         exec tmux attach -t "$attach_session"
+        exec tmux attach -t "$attach_session"
       else
-         exec tmux new
+        if [[ "$PWD" =~ ^/mnt/c/Users/.* ]]; then
+          # wezterm&tmux経由だとカレントディレクトリがおかしくなるので対策
+          cd $HOME
+        fi
+        # アタッチされていないセッションがなかったので、シェルを経由せずにセッションを立ち上げる
+        exec tmux new
       fi
     fi
 fi
