--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -45,8 +45,8 @@ set-option -g default-terminal screen-256color
 set-option -g default-terminal tmux-256color
 {{- end }}
 
-# True color support?
-set-option -sa terminal-overrides ",xterm*:Tc"
+# True color support
+set-option -sa terminal-features ",xterm-256color:RGB"
 
 # 2重tmuxでもクリップボードコピーできるようにする OSC52
 set-option -g set-clipboard on
