--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -1,21 +1,35 @@
-# for wezterm
-# see: https://wezfurlong.org/wezterm/shell-integration.html?h=shell+integration
-set -g allow-passthrough on
+# ----------------------------------------- tmux sensible --------------------------------------------
+# https://github.com/tmux-plugins/tmux-sensible
 
-# TABとCTRL-Iを区別するための設定、今は使ってないのでオフにする
-# @see: https://github.com/tmux/tmux/issues/2705#issuecomment-1518520942
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
 
-# not working
-# set -s extended-keys on
-# set -as terminal-features 'xterm*:extkeys'
+# Increase scrollback buffer size from 2000 to 50000 lines
+set -g history-limit 50000
 
-# bind-key -T root         F12        set key-table workaround
-# bind-key -T workaround   F12        set key-table root
-# bind-key -T workaround   Tab        send-keys Escape "[105;6u" \; set key-table root
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
-# bind-key -T root         F12        set key-table virt
-# bind-key -T virt 'C-i' if-shell "$is_vim" "send-keys Escape '[105;6u'" "send C-i" \; set key-table root
+# Increase tmux messages display duration from 750ms to 4s
+set -g display-time 4000
+
+# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
+set -g status-interval 5
+
+# (OS X) Fix pbcopy/pbpaste for old tmux versions (pre 2.6)
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# Upgrade $TERM
+set -g default-terminal "screen-256color"
+
+# Emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set -g status-keys emacs
+
+# Focus events enabled for terminals that support them
+set -g focus-events on
+
+# Super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
+
+# ----------------------------------------- my settings --------------------------------------------
 
 {{ if .isLocal -}}
 # prefixキーをC-qに変更
@@ -26,27 +40,31 @@ bind-key C-q send-prefix
 # C-bのキーバインドを解除
 unbind C-b
 
-# ステータスバーの色を設定する
-set-option -g status-bg "colour238"
+# https://github.com/wfxr/tmux-power
+#set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'sky'
 
-# status line の文字色を指定する
-set-option -g status-fg "colour255"
-
-{{- else }}
-
-set-option -g status-bg "colour12"
-
-{{- end }}
-
-# tmuxを256色表示できるようにする
-{{- if .isMac }}
-set-option -g default-terminal screen-256color
-{{- else }}
+# 斜体などの表示に対応
 set-option -g default-terminal tmux-256color
-{{- end }}
+
+# for wezterm
+# see: https://wezfurlong.org/wezterm/shell-integration.html?h=shell+integration
+set -g allow-passthrough on
 
 # True color support
 set-option -sa terminal-features ",xterm-256color:RGB"
+
+{{- else }}
+
+set -g @tmux_power_theme 'everforest'
+
+# True color support (support tmux old version)
+set-option -ga terminal-overrides ',xterm-256color:Tc'
+
+{{- end }}
+
+# theme
+run-shell "./.tmux/tmux-power.tmux"
 
 # 2重tmuxでもクリップボードコピーできるようにする OSC52
 set-option -g set-clipboard on
@@ -128,21 +146,6 @@ bind -T copy-mode-vi Y send -X copy-line
 # 'C-p'でペースト
 bind-key C-p paste-buffer
 
+# ウィンドウ番号の連番を振りなおす
 set-option -g renumber-windows on
 
-{{- if .isLocal }}
-
-# tmux plugin
-set -g @plugin 'tmux-plugins/tpm'
-# fix startup prompt
-# これを有効にするとvimでESCの反応が遅くなる
-# set-option -s escape-time 50
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-#set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'sky'
-run-shell "./.tmux/plugins/my_tmux-power/tmux-power.tmux"
-
-run '~/.tmux/plugins/tpm/tpm'
-
-{{- end }}
