--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -64,7 +64,7 @@ set-option -ga terminal-overrides ',xterm-256color:Tc'
 {{- end }}
 
 # theme
-run-shell "./.tmux/tmux-power.tmux"
+run-shell "~/.tmux/tmux-power.tmux"
 
 # 2重tmuxでもクリップボードコピーできるようにする OSC52
 set-option -g set-clipboard on
