--- a/private_dot_zshrc.tmpl
+++ b/private_dot_zshrc.tmpl
@@ -57,6 +57,7 @@ source $ZSHHOME/mac.zsh
 source $ZSHHOME/wsl.zsh
 {{- end }}
 source $ZSHHOME/theme.zsh
+source $ZSHHOME/zle.zsh
 
 if [[ "$TERM_PROGRAM" == "WezTerm" ]]; then
   source $ZSHHOME/wezterm.sh
