--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -2,7 +2,8 @@
 # https://github.com/tmux-plugins/tmux-sensible
 
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
-set -s escape-time 0
+# change 0 to 15, defualt: 500
+set -s escape-time 15
 
 # Increase scrollback buffer size from 2000 to 50000 lines
 set -g history-limit 50000
@@ -17,7 +18,7 @@ set -g status-interval 5
 # set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # Upgrade $TERM
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # Emacs key bindings in tmux command prompt (prefix + :) are better than
 # vi keys, even for vim users
@@ -56,7 +57,15 @@ set-option -sa terminal-features ",xterm-256color:RGB"
 
 {{- else }}
 
+# サブのprefixキーをC-qに変更 (二重tmuxにも対応)
+set -g prefix2 C-q
+# C-q*2でC-qを送る
+bind-key C-q send-prefix
+
 set -g @tmux_power_theme 'everforest'
+
+# 斜体に対応していないが、互換性重視で
+set-option -g default-terminal screen-256color
 
 # True color support (support tmux old version)
 set-option -ga terminal-overrides ',xterm-256color:Tc'
@@ -70,16 +79,23 @@ run-shell "~/.tmux/tmux-power.tmux"
 set-option -g set-clipboard on
 
 # vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# 循環するのをifで防止
+bind h if -F '#{pane_at_left}' '' 'select-pane -L'
+bind j if -F '#{pane_at_bottom}' '' 'select-pane -D'
+bind k if -F '#{pane_at_top}' '' 'select-pane -U'
+bind l if -F '#{pane_at_right}' '' 'select-pane -R'
+
+# 標準矢印キーのキーリピートを無効化
+bind-key    Up select-pane -U
+bind-key  Down select-pane -D
+bind-key  Left select-pane -L
+bind-key Right select-pane -R
 
 # Use Alt-hjkl keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n M-h if -F '#{pane_at_left}' '' 'select-pane -L'
+bind -n M-j if -F '#{pane_at_bottom}' '' 'select-pane -D'
+bind -n M-k if -F '#{pane_at_top}' '' 'select-pane -U'
+bind -n M-l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 ## ペインの順次移動をAlt + o に設定
 bind -n M-o select-pane -t :.+
@@ -87,11 +103,25 @@ bind -n M-o select-pane -t :.+
 # 前のウィンドウにiで切り替え
 bind-key i last-window
 
+# ウィンドウ移動をAlt + ()に設定
+bind -n M-9 previous-window
+bind -n M-0 next-window
+
 # vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Alt+数字でウィンドウ移動
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
 
 # / でペインを縦分割する
 bind / split-window -hc "#{pane_current_path}"
