--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -98,7 +98,7 @@ bind -n M-k if -F '#{pane_at_top}' '' 'select-pane -U'
 bind -n M-l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 ## ペインの順次移動をAlt + o に設定
-bind -n M-o select-pane -t :.+
+# bind -n M-o select-pane -t :.+
 
 # 前のウィンドウにiで切り替え
 bind-key i last-window
