--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -3,3 +3,7 @@
     url = "https://github.com/junegunn/fzf.git"
     refreshPeriod = "168h"
 
+[".vim/pack/chezmoi/opt/minpac"]
+    type = "git-repo"
+    url = "https://github.com/k-takata/minpac.git"
+    refreshPeriod = "168h"
