--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -5,3 +5,13 @@
 	excludesfile = ~/.gitignore_global
 [init]
 	defaultBranch = main
+[alias]
+	unadd = restore --staged
+	a = add
+	c = commit
+	s = switch
+	sc = switch -c
+	st = status
+	la = log --oneline --decorate --graph --all
+	l = log --oneline --decorate --graph
+	pushf = push --force-with-lease --force-if-includes
