git config: default to commit --cleanup scissors

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -15,3 +15,5 @@
 	la = log --oneline --decorate --graph --all
 	l = log --oneline --decorate --graph
 	pushf = push --force-with-lease --force-if-includes
+[commit]
+	cleanup = scissors
